--- a/public/cardpayment.html
+++ b/public/cardpayment.html
@@ -13,90 +13,6 @@
 		<script src="/proxy/widget/dhamen-pay.js" type="text/javascript"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<!-- <style type="text/css">
-			body {
-				font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-					"Helvetica Neue", Arial, sans-serif;
-				background: #000;
-			}
-			.wpwl-form-card {
-				box-shadow: none !important;
-				background: #faf9f936 !important;
-				color: #ffffff55;
-				border-radius: 15px !important;
-				border: none !important;
-				padding: 16px !important ;
-				margin: auto !important;
-			}
-			input[type="tel"],
-			input[type="text"],
-			input[type="email"],
-			input[type="password"],
-			select,
-			textarea {
-				background: transparent !important;
-				border: 1px solid #ffffff55 !important;
-				border-radius: 24px !important;
-				color: #ffffff !important;
-				font-size: 19px !important;
-				padding: 24px !important;
-				width: 100% !important;
-				box-sizing: border-box !important;
-			}
-			.wpwl-control-brand {
-				display: none !important;
-			}
-			.wpwl-label {
-				display: none !important;
-			}
-
-			/* Target specific form groups for styling */
-			.wpwl-group-cardNumber,
-			.wpwl-group-cvv,
-			.wpwl-group-expiry,
-			.wpwl-group-cardHolder {
-				margin-bottom: 15px !important;
-			}
-
-			/* Ensure iframes are properly sized and accessible */
-			.wpwl-group-cardNumber .wpwl-control-iframe,
-			.wpwl-group-cvv .wpwl-control-iframe,
-			.wpwl-group-expiry .wpwl-control-iframe,
-			.wpwl-group-cardHolder .wpwl-control-iframe {
-				border: 1px solid #ffffff55 !important;
-				border-radius: 24px !important;
-				background: transparent !important;
-				height: 50px !important;
-				width: 100% !important;
-				padding: 15px !important;
-				pointer-events: auto !important;
-			}
-
-			/* Target iframe container - allow interaction */
-			.wpwl-control-iframe {
-				border-radius: 24px !important;
-				height: auto !important;
-				min-height: 40px !important;
-			}
-
-			.wpwl-button-pay {
-				border: none !important;
-				font-weight: bold !important;
-				text-transform: uppercase !important;
-				padding: 17px;
-				width: 100%;
-				border-radius: 50px;
-			}
-
-			/* Hide labels */
-			.wpwl-label {
-				display: none !important;
-			}
-			/* Hide brand detection */
-			.wpwl-control-brand {
-				display: none !important;
-			}
-		</style> -->
 		<style>
 			* {
 				margin: 0;
@@ -156,7 +72,17 @@
 			}
 
 			input[type="text"]::placeholder {
-				color: #888;
+				color: #888 !important;
+			}
+
+			input[type="tel"]::placeholder {
+				color: #888 !important;
+			}
+
+			/* Ensure input text is white */
+			input[type="text"],
+			input[type="tel"] {
+				color: #ffffff !important;
 			}
 
 			#cc-number {
@@ -185,7 +111,7 @@
 			.payment-methods {
 				color: #888;
 				font-size: 14px;
-				margin-bottom: 20px;
+				/* margin-bottom: 20px; */
 				display: flex;
 				align-items: center;
 				gap: 8px;
@@ -233,14 +159,37 @@
 			.unified-input {
 				position: relative;
 			}
+
+			/* Hide CVV hints/labels */
+			.wpwl-hint,
+			.wpwl-hint-cvvHint,
+			[class*="wpwl-hint"] {
+				display: none !important;
+			}
+
+			div[name="wpwl-label-card.cvv"] {
+				display: none !important;
+			}
+
+			input[name="card.number"] {
+				color: #ffffff !important;
+			}
+
+			input[name="card.expiry"] {
+				color: #ffffff !important;
+			}
+
+			input[name="card.cvv"] {
+				color: #ffffff !important;
+			}
+
+			/* Hide labels */
+			.wpwl-label {
+				display: none !important;
+			}
 		</style>
 	</head>
-	<body>
-		<dhamen-pay
-			formstyle="card"
-			invoiceid="a012d754960293e3878c0f1e0e5894d79d23f2e692a95af94610e39a1104ebad"
-		></dhamen-pay>
-	</body>
+	<body></body>
 
 	<script type="text/javascript">
 		// You can add custom JavaScript here if needed
@@ -251,33 +200,18 @@
 				var paymentMethodsContainer = $(`
 <div class="container">
   <div class="card-details">
-    <div class="payment-methods">
-      WE ACCEPT
-      <!-- MasterCard SVG -->
-      <svg width="32" height="20" viewBox="0 0 32 20" fill="none">
-        <rect width="32" height="20" rx="4" fill="white" />
-        <circle cx="12" cy="10" r="6" fill="#EB001B" />
-        <circle cx="20" cy="10" r="6" fill="#FF5F00" />
-      </svg>
-      <!-- Visa SVG -->
-      <svg width="32" height="20" viewBox="0 0 780 500" xmlns="http://www.w3.org/2000/svg" fill="none">
-        <rect width="780" height="500" rx="40" fill="#0E4595" />
-        <path d="m293.2 348.73l33.361-195.76h53.36l-33.385 195.76h-53.336zm246.11-191.54c-10.57-3.966-27.137-8.222-47.822-8.222-52.725 0-89.865 26.55-90.18 64.603-0.299 28.13 26.514 43.822 46.752 53.186 20.771 9.595 27.752 15.714 27.654 24.283-0.131 13.121-16.586 19.116-31.922 19.116-21.357 0-32.703-2.967-50.227-10.276l-6.876-3.11-7.489 43.823c12.463 5.464 35.51 10.198 59.438 10.443 56.09 0 92.5-26.246 92.916-66.882 0.199-22.269-14.016-39.216-44.801-53.188-18.65-9.055-30.072-15.099-29.951-24.268 0-8.137 9.668-16.839 30.557-16.839 17.449-0.27 30.09 3.535 39.938 7.5l4.781 2.26 7.232-42.429m137.31-4.223h-41.232c-12.773 0-22.332 3.487-27.941 16.234l-79.244 179.4h56.031s9.16-24.123 11.232-29.418c6.125 0 60.555 0.084 68.338 0.084 1.596 6.853 6.49 29.334 6.49 29.334h49.514l-43.188-195.64zm-65.418 126.41c4.412-11.279 21.26-54.723 21.26-54.723-0.316 0.522 4.379-11.334 7.074-18.684l3.605 16.879s10.219 46.729 12.354 56.528h-44.293zm-363.3-126.41l-52.24 133.5-5.567-27.13c-9.725-31.273-40.025-65.155-73.898-82.118l47.766 171.2 56.456-0.064 84.004-195.39h-56.521" fill="#ffffff" />
-        <path d="m146.92 152.96h-86.041l-0.681 4.073c66.938 16.204 111.23 55.363 129.62 102.41l-18.71-89.96c-3.23-12.395-12.597-16.094-24.186-16.527" fill="#F2AE14" />
-      </svg>
-      <!-- Mada SVG -->
-      <svg width="32" height="20" viewBox="0 0 32 20" fill="none">
-        <rect width="32" height="20" rx="4" fill="#4A90E2" />
-        <rect x="0" y="8.67" width="32" height="2.67" fill="white" />
-        <rect x="0" y="11.33" width="32" height="8.67" fill="#8BC34A" />
-      </svg>
-    </div>
   </div>
 </div>
 `);
 
 				// Hide labels and brand selector
-				$(".wpwl-label, .wpwl-group-brand, .wpwl-label-cvv").hide();
+				$(".wpwl-label, .wpwl-group-brand").hide();
+
+				// Hide CVV hint/label that appears on change
+				$(".wpwl-hint, .wpwl-hint-cvvHint").hide();
+
+				// Add payment methods container after cardholder
+				$(".wpwl-form-card").prepend(paymentMethodsContainer);
 
 				// Style the form container
 				$(".wpwl-form-card").css({
@@ -326,12 +260,17 @@
 					width: "100%",
 					border: "none",
 					background: "transparent",
-					color: "#ffffff",
+					color: "#ffffff !important",
 					"font-size": "16px",
 					padding: "16px 6px",
 					outline: "none",
 					"text-align": "center",
 				});
+				$(".wpwl-control-expiry").attr(
+					"style",
+					$(".wpwl-control-expiry").attr("style") +
+						"; color: #ffffff !important;"
+				);
 
 				// Style and add CVV iframe
 				$(".wpwl-group-cvv").css({
@@ -370,7 +309,7 @@
 					width: "100%",
 					border: "none",
 					background: "transparent",
-					color: "#ffffff",
+					color: "#ffffff !important",
 					"font-size": "16px",
 					padding: "16px 12px",
 					outline: "none",
@@ -378,12 +317,39 @@
 					height: "50px",
 				});
 				$(".wpwl-control-cardHolder").attr("placeholder", "Cardholder name");
+				$(".wpwl-control-cardHolder").attr(
+					"style",
+					$(".wpwl-control-cardHolder").attr("style") +
+						"; color: #ffffff !important;"
+				);
 
 				holderInput.append($(".wpwl-group-cardHolder"));
 				$(".card-details").append(holderInput);
 
-				// Add payment methods at the bottom
-				$(".card-details").append(paymentMethodsContainer);
+				const paymentMethodsLogos = $(`
+		<div class="payment-methods">
+      WE ACCEPT
+      <!-- MasterCard SVG -->
+      <svg width="32" height="20" viewBox="0 0 32 20" fill="none">
+        <rect width="32" height="20" rx="4" fill="white" />
+        <circle cx="12" cy="10" r="6" fill="#EB001B" />
+        <circle cx="20" cy="10" r="6" fill="#FF5F00" />
+      </svg>
+      <!-- Visa SVG -->
+      <svg width="32" height="20" viewBox="0 0 780 500" xmlns="http://www.w3.org/2000/svg" fill="none">
+        <rect width="780" height="500" rx="40" fill="#0E4595" />
+        <path d="m293.2 348.73l33.361-195.76h53.36l-33.385 195.76h-53.336zm246.11-191.54c-10.57-3.966-27.137-8.222-47.822-8.222-52.725 0-89.865 26.55-90.18 64.603-0.299 28.13 26.514 43.822 46.752 53.186 20.771 9.595 27.752 15.714 27.654 24.283-0.131 13.121-16.586 19.116-31.922 19.116-21.357 0-32.703-2.967-50.227-10.276l-6.876-3.11-7.489 43.823c12.463 5.464 35.51 10.198 59.438 10.443 56.09 0 92.5-26.246 92.916-66.882 0.199-22.269-14.016-39.216-44.801-53.188-18.65-9.055-30.072-15.099-29.951-24.268 0-8.137 9.668-16.839 30.557-16.839 17.449-0.27 30.09 3.535 39.938 7.5l4.781 2.26 7.232-42.429m137.31-4.223h-41.232c-12.773 0-22.332 3.487-27.941 16.234l-79.244 179.4h56.031s9.16-24.123 11.232-29.418c6.125 0 60.555 0.084 68.338 0.084 1.596 6.853 6.49 29.334 6.49 29.334h49.514l-43.188-195.64zm-65.418 126.41c4.412-11.279 21.26-54.723 21.26-54.723-0.316 0.522 4.379-11.334 7.074-18.684l3.605 16.879s10.219 46.729 12.354 56.528h-44.293zm-363.3-126.41l-52.24 133.5-5.567-27.13c-9.725-31.273-40.025-65.155-73.898-82.118l47.766 171.2 56.456-0.064 84.004-195.39h-56.521" fill="#ffffff" />
+        <path d="m146.92 152.96h-86.041l-0.681 4.073c66.938 16.204 111.23 55.363 129.62 102.41l-18.71-89.96c-3.23-12.395-12.597-16.094-24.186-16.527" fill="#F2AE14" />
+      </svg>
+      <!-- Mada SVG -->
+      <svg width="32" height="20" viewBox="0 0 32 20" fill="none">
+        <rect width="32" height="20" rx="4" fill="#4A90E2" />
+        <rect x="0" y="8.67" width="32" height="2.67" fill="white" />
+        <rect x="0" y="11.33" width="32" height="8.67" fill="#8BC34A" />
+      </svg>
+    </div>
+`);
+				$(".card-details").append(paymentMethodsLogos);
 
 				// Hide mobile phone and birth date fields (not needed)
 				$(
@@ -392,6 +358,15 @@
 
 				// Style pay button
 				$(".wpwl-button-pay").addClass("pay-button");
+
+				// Watch for dynamically added CVV hints and hide them
+				var observer = new MutationObserver(function (mutations) {
+					$(".wpwl-hint, .wpwl-hint-cvvHint, [class*='wpwl-hint']").hide();
+				});
+				observer.observe(document.querySelector(".wpwl-form-card"), {
+					childList: true,
+					subtree: true,
+				});
 
 				console.log(
 					"Payment form styled successfully. Card number and CVV are in secure iframes."
@@ -435,12 +410,15 @@
 		const urlParams = new URLSearchParams(window.location.search);
 		const invoiceId = urlParams.get("invoiceId");
 
-		// If invoice ID is provided in query string, update the dhamen-pay element
+		// If invoice ID is provided in query string, create and populate the dhamen-pay element
 		if (invoiceId) {
-			const dhamenPayElement = document.getElementById("dhamenPayWidget");
-			if (dhamenPayElement) {
-				dhamenPayElement.setAttribute("invoiceid", invoiceId);
-			}
+			// Create dhamen-pay element
+			const dhamenPayElement = document.createElement("dhamen-pay");
+			dhamenPayElement.setAttribute("formstyle", "card");
+			dhamenPayElement.setAttribute("invoiceid", invoiceId);
+
+			// Append to body
+			document.body.appendChild(dhamenPayElement);
 		} else {
 			// If no invoice ID in query string, redirect back to payment selection
 			console.warn(
