feat: update payment gateway integration and enhance server logging
- Changed script source paths from /proxy to /pg for better compatibility with ad blockers.
- Added request logging middleware to server for improved debugging.
- Implemented CORS handling for preflight requests and enhanced proxy response logging.
- Introduced health and metrics endpoints to monitor server status and request statistics.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>DhamenPay Custom</title>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="https://dhamendemo.elm.sa/widget/dhamen-pay.js"></script>
+		<script src="/pg/widget/dhamen-pay.js"></script>
 		<style>
 			body {
 				font-family: -apple-system, sans-serif;
