--- a/test.html
+++ b/test.html
@@ -72,7 +72,7 @@
 				width: 100% !important;
 			}
 		</style>
-		<script src="/proxy/widget/dhamen-pay.js"></script>
+		<script src="/pg/widget/dhamen-pay.js"></script>
 	</head>
 	<body>
 		<div id="pay-root"></div>
