--- a/public/apple-pay.html
+++ b/public/apple-pay.html
@@ -205,7 +205,7 @@
 				);
 			}
 		</script>
-		<script src="/proxy/widget/dhamen-pay.js" type="text/javascript"></script>
+		<script src="/pg/widget/dhamen-pay.js" type="text/javascript"></script>
 		<script>
 			var wpwlOptions = {
 				style: "card",
