--- a/public/cardpayment.html
+++ b/public/cardpayment.html
@@ -10,7 +10,7 @@
 			crossorigin="anonymous"
 		></script>
 
-		<script src="/proxy/widget/dhamen-pay.js" type="text/javascript"></script>
+		<script src="/pg/widget/dhamen-pay.js" type="text/javascript"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<style>
