feat: redesign payment selection interface and streamline navigation
- Updated index.html to enhance the payment selection UI with a new layout and improved styles.
- Added functionality for invoice ID input and integrated payment method buttons for card and Apple Pay.
- Simplified redirection logic in cardpayment.html and apple-pay.html to navigate to the home page on missing invoice ID.
- Improved overall user experience with responsive design adjustments and clearer payment instructions.

--- a/public/apple-pay.html
+++ b/public/apple-pay.html
@@ -322,7 +322,7 @@
 				console.warn(
 					"No invoice ID provided. Redirecting to payment selection page."
 				);
-				window.location.href = "payment-select.html";
+				window.location.href = "/";
 			}
 		</script>
 	</body>
