--- a/public/cardpayment-old.html
+++ b/public/cardpayment-old.html
@@ -180,7 +180,7 @@
 			console.warn(
 				"No invoice ID provided. Redirecting to payment selection page."
 			);
-			window.location.href = "payment-select.html";
+			window.location.href = "/";
 		}
 	</script>
 </html>
