--- a/index.html
+++ b/index.html
@@ -1,102 +1,385 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<title>DhamenPay Custom</title>
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="/pg/widget/dhamen-pay.js"></script>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Payment Selection</title>
 		<style>
+			* {
+				margin: 0;
+				padding: 0;
+				box-sizing: border-box;
+			}
+
 			body {
-				font-family: -apple-system, sans-serif;
+				font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+					Oxygen, Ubuntu, Cantarell, sans-serif;
 				background: #1a1a1a;
 				display: flex;
 				align-items: center;
 				justify-content: center;
 				min-height: 100vh;
 				padding: 20px;
+				color: #ffffff;
 			}
-			.wpwl-form-card {
-				background: #2d2d2d !important;
-				border-radius: 24px !important;
-				padding: 32px !important;
-				max-width: 420px !important;
-				box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5) !important;
+
+			.container {
+				width: 100%;
+				max-width: 400px;
+				text-align: center;
 			}
-			.wpwl-group-cardNumber,
-			.wpwl-group-expiry,
-			.wpwl-group-cvv,
-			.wpwl-label,
-			.wpwl-control-brand {
-				display: none !important;
+
+			.payment-header {
+				margin-bottom: 40px;
 			}
-			.unified-card {
+
+			.payment-icon {
+				width: 80px;
+				height: 80px;
+				background: linear-gradient(135deg, #22c55e, #16a34a);
+				border-radius: 50%;
+				margin: 0 auto 24px;
 				display: flex;
 				align-items: center;
-				background: #3a3a3a;
-				border: 1px solid #4a4a4a;
-				border-radius: 16px;
-				padding: 0 20px;
-				height: 56px;
-				gap: 12px;
+				justify-content: center;
+				box-shadow: 0 8px 32px rgba(34, 197, 94, 0.3);
+			}
+
+			.payment-icon svg {
+				width: 40px;
+				height: 40px;
+				fill: white;
+			}
+
+			.payment-title {
+				font-size: 32px;
+				font-weight: 400;
 				margin-bottom: 16px;
+				color: #ffffff;
 			}
-			.unified-card input {
-				border: none;
-				background: transparent;
-				color: #999;
-				font-size: 15px;
+
+			.payment-description {
+				font-size: 16px;
+				color: #a3a3a3;
+				line-height: 1.5;
+				margin-bottom: 40px;
+			}
+
+			.invoice-input-container {
+				margin-bottom: 32px;
+			}
+
+			.invoice-label {
+				display: block;
+				font-size: 14px;
+				color: #a3a3a3;
+				margin-bottom: 8px;
+				text-align: left;
+			}
+
+			.invoice-input {
+				width: 100%;
+				background: rgba(255, 255, 255, 0.05);
+				border: 1px solid rgba(255, 255, 255, 0.1);
+				color: #ffffff;
+				padding: 16px;
+				border-radius: 12px;
+				font-size: 16px;
+				font-family: inherit;
+				transition: all 0.2s ease;
+			}
+
+			.invoice-input:focus {
 				outline: none;
+				border-color: #22c55e;
+				background: rgba(255, 255, 255, 0.08);
+				box-shadow: 0 0 0 3px rgba(34, 197, 94, 0.1);
 			}
-			.card-number {
-				flex: 1;
+
+			.invoice-input::placeholder {
+				color: #6b7280;
 			}
-			.expiry {
-				width: 70px;
-				text-align: center;
+
+			.payment-options {
+				display: flex;
+				flex-direction: column;
+				gap: 16px;
 			}
-			.cvv {
-				width: 50px;
-				text-align: center;
+
+			.apple-pay-button {
+				width: 100%;
+				background: #000;
+				border: 1px solid #000;
+				color: #ffffff;
+				border: none;
+				border-radius: 50px;
+				font-size: 18px;
+				font-weight: 300;
+				cursor: pointer;
+				transition: background-color 0.2s ease;
 			}
-			.wpwl-button-pay {
-				background: linear-gradient(135deg, #4ade80, #22c55e) !important;
-				border: none !important;
-				border-radius: 50px !important;
-				padding: 18px !important;
-				font-weight: 700 !important;
-				text-transform: uppercase !important;
-				color: white !important;
-				width: 100% !important;
+
+			.apple-pay-button:hover {
+				background: #000;
+			}
+
+			.apple-pay-button:active {
+				transform: translateY(1px);
+			}
+
+			.apple-pay-button svg {
+				vertical-align: middle;
+				margin-left: 10px;
+			}
+
+			.pay-button {
+				width: 100%;
+				background: #000;
+				border: 1px solid #4ade80;
+				color: #ffffff;
+				border-radius: 50px;
+				padding: 18px;
+				font-size: 18px;
+				font-weight: 300;
+				cursor: pointer;
+				transition: background-color 0.2s ease;
+			}
+
+			.pay-button:hover {
+				background: #22c55e;
+			}
+
+			.pay-button:active {
+				transform: translateY(1px);
+			}
+
+			.security-note {
+				margin-top: 24px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				gap: 8px;
+				font-size: 14px;
+				color: #22c55e;
+				opacity: 0.9;
+			}
+
+			.security-icon {
+				width: 48px;
+				height: 48px;
+				fill: #22c55e;
+			}
+
+			.arabic-text {
+				font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+				direction: rtl;
+			}
+
+			.guide-link {
+				margin-top: 32px;
+				padding-top: 24px;
+				border-top: 1px solid rgba(255, 255, 255, 0.1);
+			}
+
+			.guide-link a {
+				display: inline-flex;
+				align-items: center;
+				gap: 8px;
+				color: #22c55e;
+				text-decoration: none;
+				font-size: 14px;
+				font-weight: 500;
+				transition: all 0.2s ease;
+				padding: 8px 16px;
+				border-radius: 8px;
+				background: rgba(34, 197, 94, 0.05);
+				border: 1px solid rgba(34, 197, 94, 0.2);
+			}
+
+			.guide-link a:hover {
+				background: rgba(34, 197, 94, 0.1);
+				border-color: rgba(34, 197, 94, 0.4);
+				transform: translateY(-2px);
+			}
+
+			.guide-link svg {
+				width: 18px;
+				height: 18px;
+				fill: currentColor;
+			}
+
+			@media (max-width: 480px) {
+				.container {
+					max-width: 320px;
+				}
+
+				.payment-title {
+					font-size: 28px;
+				}
+
+				.payment-description {
+					font-size: 15px;
+				}
 			}
 		</style>
 	</head>
 	<body>
-		<dhamen-pay
-			formstyle="card"
-			invoiceid="dcbca8888df7fa0258c4ce2d13c1a2dcd816aeb9c43df45933c7ded6ce33a1ff"
-		></dhamen-pay>
+		<div class="container">
+			<!-- Payment Header -->
+			<div class="payment-header">
+				<div class="payment-icon">
+					<svg
+						fill="#ffffff"
+						height="256px"
+						width="256px"
+						version="1.1"
+						id="Capa_1"
+						xmlns="http://www.w3.org/2000/svg"
+						xmlns:xlink="http://www.w3.org/1999/xlink"
+						viewBox="0 0 229.5 229.5"
+						xml:space="preserve"
+					>
+						<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+						<g
+							id="SVGRepo_tracerCarrier"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						></g>
+						<g id="SVGRepo_iconCarrier">
+							<path
+								d="M214.419,32.12c-0.412-2.959-2.541-5.393-5.419-6.193L116.76,0.275c-1.315-0.366-2.704-0.366-4.02,0L20.5,25.927 c-2.878,0.8-5.007,3.233-5.419,6.193c-0.535,3.847-12.74,94.743,18.565,139.961c31.268,45.164,77.395,56.738,79.343,57.209 c0.579,0.14,1.169,0.209,1.761,0.209s1.182-0.07,1.761-0.209c1.949-0.471,48.076-12.045,79.343-57.209 C227.159,126.864,214.954,35.968,214.419,32.12z M174.233,85.186l-62.917,62.917c-1.464,1.464-3.384,2.197-5.303,2.197 s-3.839-0.732-5.303-2.197l-38.901-38.901c-1.407-1.406-2.197-3.314-2.197-5.303s0.791-3.897,2.197-5.303l7.724-7.724 c2.929-2.928,7.678-2.929,10.606,0l25.874,25.874l49.89-49.891c1.406-1.407,3.314-2.197,5.303-2.197s3.897,0.79,5.303,2.197 l7.724,7.724C177.162,77.508,177.162,82.257,174.233,85.186z"
+							></path>
+						</g>
+					</svg>
+				</div>
+				<h1 class="payment-title">Payment type</h1>
+				<p class="payment-description">
+					Choose the payment method that suits you to make things easier for you
+					and to simplify payment methods.
+				</p>
+			</div>
+
+			<!-- Invoice ID Input -->
+			<div class="invoice-input-container">
+				<label for="invoiceId" class="invoice-label">Invoice ID</label>
+				<input
+					type="text"
+					id="invoiceId"
+					class="invoice-input"
+					placeholder="Enter your invoice ID"
+					required
+				/>
+			</div>
+
+			<!-- Payment Options -->
+			<div class="payment-options">
+				<button type="button" class="pay-button" onclick="goToCardPayment()">
+					<span class="arabic-text">دفع بالبطاقة</span>
+					<span>&ensp;</span>
+					<!-- MasterCard SVG -->
+					<svg width="32" height="20" viewBox="0 0 32 20" fill="none">
+						<rect width="32" height="20" rx="4" fill="white" />
+						<circle cx="12" cy="10" r="6" fill="#EB001B" />
+						<circle cx="20" cy="10" r="6" fill="#FF5F00" />
+					</svg>
+					<!-- Visa SVG -->
+					<svg
+						width="32"
+						height="20"
+						viewBox="0 0 780 500"
+						xmlns="http://www.w3.org/2000/svg"
+						fill="none"
+					>
+						<rect width="780" height="500" rx="40" fill="#0E4595" />
+						<path
+							d="m293.2 348.73l33.361-195.76h53.36l-33.385 195.76h-53.336zm246.11-191.54c-10.57-3.966-27.137-8.222-47.822-8.222-52.725 0-89.865 26.55-90.18 64.603-0.299 28.13 26.514 43.822 46.752 53.186 20.771 9.595 27.752 15.714 27.654 24.283-0.131 13.121-16.586 19.116-31.922 19.116-21.357 0-32.703-2.967-50.227-10.276l-6.876-3.11-7.489 43.823c12.463 5.464 35.51 10.198 59.438 10.443 56.09 0 92.5-26.246 92.916-66.882 0.199-22.269-14.016-39.216-44.801-53.188-18.65-9.055-30.072-15.099-29.951-24.268 0-8.137 9.668-16.839 30.557-16.839 17.449-0.27 30.09 3.535 39.938 7.5l4.781 2.26 7.232-42.429m137.31-4.223h-41.232c-12.773 0-22.332 3.487-27.941 16.234l-79.244 179.4h56.031s9.16-24.123 11.232-29.418c6.125 0 60.555 0.084 68.338 0.084 1.596 6.853 6.49 29.334 6.49 29.334h49.514l-43.188-195.64zm-65.418 126.41c4.412-11.279 21.26-54.723 21.26-54.723-0.316 0.522 4.379-11.334 7.074-18.684l3.605 16.879s10.219 46.729 12.354 56.528h-44.293zm-363.3-126.41l-52.24 133.5-5.567-27.13c-9.725-31.273-40.025-65.155-73.898-82.118l47.766 171.2 56.456-0.064 84.004-195.39h-56.521"
+							fill="#ffffff"
+						/>
+						<path
+							d="m146.92 152.96h-86.041l-0.681 4.073c66.938 16.204 111.23 55.363 129.62 102.41l-18.71-89.96c-3.23-12.395-12.597-16.094-24.186-16.527"
+							fill="#F2AE14"
+						/>
+					</svg>
+					<!-- Mada SVG -->
+					<svg width="32" height="20" viewBox="0 0 32 20" fill="none">
+						<rect width="32" height="20" rx="4" fill="#4A90E2" />
+						<rect x="0" y="8.67" width="32" height="2.67" fill="white" />
+						<rect x="0" y="11.33" width="32" height="8.67" fill="#8BC34A" />
+					</svg>
+				</button>
+
+				<button type="button" class="apple-pay-button" onclick="goToApplePay()">
+					Buy with
+					<svg
+						fill="#ffffff"
+						width="64px"
+						height="64px"
+						viewBox="0 -34.55 120.3 120.3"
+						xmlns="http://www.w3.org/2000/svg"
+						stroke="#ffffff"
+					>
+						<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+						<g
+							id="SVGRepo_tracerCarrier"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						></g>
+						<g id="SVGRepo_iconCarrier">
+							<path
+								d="M22.8 6.6c1.4-1.8 2.4-4.2 2.1-6.6-2.1.1-4.6 1.4-6.1 3.1-1.3 1.5-2.5 4-2.2 6.3 2.4.3 4.7-1 6.2-2.8M24.9 10c-3.4-.2-6.3 1.9-7.9 1.9-1.6 0-4.1-1.8-6.8-1.8-3.5.1-6.7 2-8.5 5.2-3.6 6.3-1 15.6 2.6 20.7 1.7 2.5 3.8 5.3 6.5 5.2 2.6-.1 3.6-1.7 6.7-1.7s4 1.7 6.8 1.6 4.6-2.5 6.3-5.1c2-2.9 2.8-5.7 2.8-5.8-.1-.1-5.5-2.1-5.5-8.3-.1-5.2 4.2-7.7 4.4-7.8-2.3-3.6-6.1-4-7.4-4.1"
+							></path>
+							<g>
+								<path
+									d="M54.3 2.9c7.4 0 12.5 5.1 12.5 12.4 0 7.4-5.2 12.5-12.7 12.5H46v12.9h-5.9V2.9h14.2zm-8.3 20h6.7c5.1 0 8-2.8 8-7.5 0-4.8-2.9-7.5-8-7.5h-6.8v15h.1zM68.3 33c0-4.8 3.7-7.8 10.3-8.2l7.6-.4v-2.1c0-3.1-2.1-4.9-5.5-4.9-3.3 0-5.3 1.6-5.8 4h-5.4c.3-5 4.6-8.7 11.4-8.7 6.7 0 11 3.5 11 9.1v19h-5.4v-4.5h-.1c-1.6 3.1-5.1 5-8.7 5-5.6 0-9.4-3.4-9.4-8.3zm17.9-2.5v-2.2l-6.8.4c-3.4.2-5.3 1.7-5.3 4.1 0 2.4 2 4 5 4 4 0 7.1-2.7 7.1-6.3zM96.9 51v-4.6c.4.1 1.4.1 1.8.1 2.6 0 4-1.1 4.9-3.9 0-.1.5-1.7.5-1.7l-10-27.6h6.1l7 22.5h.1l7-22.5h6L110 42.4c-2.4 6.7-5.1 8.8-10.8 8.8-.4-.1-1.8-.1-2.3-.2z"
+								></path>
+							</g>
+						</g>
+					</svg>
+				</button>
+			</div>
+
+			<!-- Security Note -->
+			<div class="security-note">
+				<svg class="security-icon" viewBox="0 0 24 24" fill="currentColor">
+					<path
+						d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4z"
+					/>
+					<path
+						d="M10 17l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
+						fill="white"
+					/>
+				</svg>
+				<span
+					>All transactions made through our payment gateway are 100%
+					secure.</span
+				>
+			</div>
+		</div>
+
 		<script>
-			var wpwlOptions = {
-				onReady: function () {
-					$(
-						".wpwl-group-cardNumber, .wpwl-group-expiry, .wpwl-group-cvv"
-					).hide();
-					var unified = $(`
- <div class="unified-card">
- <input type="text" class="card-number" placeholder="Card number"
-maxlength="19">
- <input type="text" class="expiry" placeholder="MM/YY" maxlength="5">
- <input type="text" class="cvv" placeholder="CVV" maxlength="4">
- </div>
- `);
-					$(".wpwl-form-card").prepend(unified);
-					// Add formatting
-					$(".card-number").on("input", function (e) {
-						var v = e.target.value.replace(/\D/g, "");
-						e.target.value = v.replace(/(\d{4})(?=\d)/g, "$1 ");
-					});
-				},
-			};
+			function goToCardPayment() {
+				const invoiceId = document.getElementById("invoiceId").value.trim();
+				if (!invoiceId) {
+					alert("Please enter an Invoice ID");
+					document.getElementById("invoiceId").focus();
+					return;
+				}
+				window.location.href = `cardpayment.html?invoiceId=${encodeURIComponent(
+					invoiceId
+				)}`;
+			}
+
+			function goToApplePay() {
+				const invoiceId = document.getElementById("invoiceId").value.trim();
+				if (!invoiceId) {
+					alert("Please enter an Invoice ID");
+					document.getElementById("invoiceId").focus();
+					return;
+				}
+				window.location.href = `apple-pay.html?invoiceId=${encodeURIComponent(
+					invoiceId
+				)}`;
+			}
 		</script>
 	</body>
 </html>
