--- a/public/cardpayment.html
+++ b/public/cardpayment.html
@@ -438,7 +438,7 @@
 			console.warn(
 				"No invoice ID provided. Redirecting to payment selection page."
 			);
-			window.location.href = "payment-select.html";
+			window.location.href = "/";
 		}
 	</script>
 </html>
